--- a/Project46/Project46/Project46.vcxproj
+++ b/Project46/Project46/Project46.vcxproj
@@ -274,6 +274,9 @@
     <ClCompile Include="Note_32_7_WindCompCrops.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Note_32_8_VectorStringSort.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Note_PreAdvanced_3_CubeTurn_GetTurnCnt.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
